[package]
name = "da-server"
version = "0.1.0"
edition = "2021"
authors = ["Karak Network"]
repository = "https://github.com/karak-network/kuda-da-server.git"
description = "KUDA DA Server"
license = "BUSL-1.1"
rust-version = "1.81.0"

[dependencies]
alloy = { version = "0.7.0", features = [
    "full",
    "rpc",
    "rpc-types",
    "rpc-types-beacon",
] }
axum = { version = "0.7.9", features = ["macros"] }
base64 = "0.22.1"
borsh = { version = "1.5.3", features = ["derive"] }
celestia-rpc = "0.8.0"
celestia-types = "0.9.0"
dotenvy = "0.15.7"
envy = "0.4.2"
eyre = "0.6.12"
futures = "0.3.31"
http = "1.1.0"
jsonrpsee-core = "0.24.7"
nmt-rs = "0.2.3"
reqwest = "0.12.9"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
thiserror = "2.0.3"
tokio = { version = "1.41.1", features = ["full"] }
tower = { version = "0.5.1", features = ["timeout"] }
tower-http = { version = "0.6.2", features = ["timeout", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
url = { version = "2.5.4", features = ["serde"] }
uuid = { version = "1.11.0", features = ["v4"] }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
